--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "polymer": "*",
     "card-deck": "marcus7777/card-deck#master",
+    "textfit-div": "Protoss78/textfit-div",
     "paper-material": "PolymerElements/paper-material#~1.0.6",
     "sortable-list": "marcus7777/sortable-list#master",
     "update-data": "marcus7777/update-data#master",
